# xdownload

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  release-template.md  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command_service.rs  lib.rs  main.rs
src-tauri/src/application/: mod.rs  services.rs
src-tauri/src/config/: platforms.toml  search_suggestions.toml
src-tauri/src/domain/: entities.rs  mod.rs  repository.rs
src-tauri/src/infrastructure/: config_repository.rs  mod.rs  repositories.rs  yt_dlp.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/download/: api.rs  mod.rs  models.rs  services.rs
src-tauri/src/modules/platform/: api.rs  mod.rs  models.rs  services.rs
src-tauri/src/modules/search/: api.rs  mod.rs  models.rs  services.rs
src-tauri/src/presentation/: commands.rs  mod.rs
src-tauri/src/utils/: mod.rs  time.rs
src/components/: CommandInput.tsx  ConfigPanel.tsx  DownloadLog.tsx  DownloadProgress.tsx  DownloadTypeNav.tsx  Footer.tsx  Header.tsx  LinkWithCopy.tsx  ModernLayout.tsx  PlatformSelector.tsx  QuickCommandButton.tsx  ResultsList.tsx  SearchBar.tsx  SearchResults.tsx  SearchSection.tsx  TaskList.tsx  UrlInput.tsx  VideoInfo.tsx
src/components/error/: ErrorBoundary.tsx  ErrorDisplay.tsx
src/components/optimized/: MemoizedSearchResult.tsx  VirtualScrollList.tsx
src/components/ui/: list-item.tsx  loading.tsx
src/config/: AppConfig.ts  constants.ts
src/hooks/: api.ts  useAppLogic.ts  useAppState.ts  useDownload.ts  useDownloadLogic.ts  useOptimizedQueries.ts  usePlatformLogic.ts  useReactQuery.ts  useSearch.ts  useSearchLogic.ts  useSmartCache.ts
src/lib/: config.ts  data-transformers.ts  error-handler.ts  ipc-client.ts  react-query.ts  useService.ts  utils.ts  validators.ts
src/services/: ErrorHandlingService.ts  IpcDownloadService.ts  IpcSearchService.ts
src/stores/: appStore.ts
src/types/: index.ts  platforms.ts  unified-interface.ts
